--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CRUDRoom">
-        <activity android:name=".EditActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.DetailNoteActivity"></activity>
+        <activity android:name=".activity.EditActivity" />
+        <activity android:name=".App">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
